--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,18 +7,31 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-                     <ul class="nav nav-list">
-         <%if current_user%>
-                       <li><%= link_to "Email", current_user.email  %></li>
 
-              <li><%= link_to "SignOut", destroy_user_session_path, :method => :delete %></li>
-              <li><%= link_to "Posts", posts_path  %></li>
-           <%else%>
-              <li><%= link_to "SignIn", new_user_session_path  %></li>
-              <%end%>
+  <div class = "nav navbar navbar-default">
+    <div class ="container">
+      <div class ="navbar-brand">
+       <%= link_to "Posts", posts_path %>
+         </div>
+            <ul class="nav navbar-nav navbar-right">
+       <%if current_user%>
+
+       <li><%= link_to "Email", current_user.email  %></li>
+       <li><%= link_to "SignOut", destroy_user_session_path, :method => :delete %></li>
+       <li><%= link_to "Posts", posts_path  %></li>
+       <%else%>
+    
+        <li><%= link_to "SignIn", new_user_session_path  %></li>
+        <li><%= link_to "SignUp", new_user_registration_path  %></li>
+         <%end%>
             </ul>
-        <%= yield %>
-    <%= gflash %>
+    </div>
+  </div>
+
+  <%= yield %>
+
+<%= gflash %>
 
 </body>
 </html>
+
